--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>레이 & 레오의 영어 꾹꾹이</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <h1>🐾 레이 & 레오의 영어 꾹꾹이</h1>
+    <p class="welcome">경이 오늘도 와줘서 고마워!</p>
+    <div class="status">레벨: <span id="level">1</span> | XP: <span id="xp">0</span>/100</div>
+    <div class="card">
+      <p id="sentence"></p>
+      <p id="translation"></p>
+      <input id="answer" type="text" placeholder="정답을 입력하세요"/>
+      <div class="buttons">
+        <button onclick="checkAnswer()">확인</button>
+        <button onclick="showHint()">힌트 보기</button>
+        <button onclick="nextQuestion()">다음 문제</button>
+      </div>
+    </div>
+    <p id="feedback"></p>
+    <div class="footer-msg" id="footer">"경이~ 오늘도 꾹꾹이 해보자!" 🐱</div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
